--- a/WSY_TreeTableView/WSYHeaderView.xib
+++ b/WSY_TreeTableView/WSYHeaderView.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
@@ -32,7 +33,7 @@
                         <action selector="wsyHeaderViewDidPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="4Uk-pu-7Lq"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="buddy_header_arrow_right.png" translatesAutoresizingMaskIntoConstraints="NO" id="Qix-RZ-Brg">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="buddy_header_arrow_right.png" translatesAutoresizingMaskIntoConstraints="NO" id="Qix-RZ-Brg">
                     <rect key="frame" x="8" y="18" width="14" height="14"/>
                 </imageView>
             </subviews>
